--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MachangosCorporation</title>
+    <title>GitanosCorporation</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header></header>
-    <nav></nav>
 
+<body>
+    <header>GitanosNavajeros</header>
+    <nav class="navbar">
+        <div class="container">
+            <a href="#" class="logo">Mi Sitio</a>
+            <ul class="nav-links">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Acerca de</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <section>
+        El mango de la especie Mangifera indica es una fruta jugosa (más específicamente una drupa) y tiene numerosas variedades con formas, colores, texturas y sabores muy variables. Es redondo a oblongo y puede tener pesos de menos de 50 g a más de 2 kg. Consta de una cáscara, una pulpa comestible (el mesocarpio) y un endocarpio duro que contiene una semilla.2​ Durante el desarrollo del fruto, la cáscara es de un color verde oscuro, que cambia a tonos verdes claros, amarillos, de color naranja, rojos o de color borra de vino al madurar el fruto. Según la variedad, la pulpa del mango maduro es dulce, de textura suave o fibrosa y de color naranja o amarillo.3​ La variedad llamada mango de hilacha es la que mayor cantidad de fibra contiene. Esta fruta contiene ácido glutámico, cuya función es estimular la memoria y mantener las células activas, de igual manera tonifica el corazón, elimina las toxinas, fortalece el tejido y previene el envejecimiento prematuro. Además, es una fruta beneficiosa para el hígado y mejora la digestión.
+
+        Cuando no ha madurado completamente, es de sabor medianamente dulce. Cuando aún está verde, su cáscara es de dicho color y su pulpa es de color amarillo verdoso muy pálido, consistencia dura y sabor dulce astringente.
+        
+        También el sabor es muy diferente entre una variedad y otra.
+        
+        Además del hombre, también algunas especies de insectos, pájaros, murciélagos y otros mamíferos comen mangos.    </section>
+    <article>
+        Una temperatura media anual de 24 a 27 °C es óptima para la planta. Temperaturas de 0 °C o más bajas dañan los árboles maduros y matan los jóvenes. Durante la floración la planta requiere temperaturas de al menos 10 °C y durante la polinización, de al menos 15 °C.3​ Vientos superiores a los 10 km/h arrancan las flores y frutos pequeños del árbol. Necesita abundante luz solar y requiere una época seca algunos meses antes de que aparezcan las flores hasta que se desarrollan las frutas y una época lluviosa a continuación.6​9​ La planta tolera cantidades de lluvia de entre 400 y 3600 mm al año y puede sobrevivir períodos secos de hasta ocho meses. Si el período seco coincide con el desarrollo de las frutas, se perderá gran cantidad de ellas.3​ La humedad relativa ideal se encuentra entre los 40 y 60 %. El suelo debe ser bien drenado. Son aptos para el cultivo del mango suelos limosos con humus, suelos arenosos ligeramente ácidos y suelos alcalinos que han sido tratados con fertilizantes.6​ El pH ideal del suelo es de 5,5 a 7,5, mientras que suelos más ácidos causan un crecimiento retardado. La planta es polinizada por el viento y diferentes insectos, como moscas, abejas, hormigas o avispas, con las moscas siendo los más importantes.3    </article> 
+    <aside>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas sed repellendus illo natus incidunt vero ad, impedit reiciendis veniam nostrum consequatur, quaerat debitis temporibus aliquam ullam eos fugiat veritatis perspiciatis?
+    </aside>
 </body>
+
 </html>
