--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
         impedit reiciendis veniam nostrum consequatur, quaerat debitis temporibus aliquam ullam eos fugiat veritatis
         perspiciatis?
     </aside>
+
+    <video controls src="./videos/Campeones_LaOcasion.mp4"></video>
+    <video controls src="./videos/Fnaf_Diles.mp4"></video>
+    <video controls src="./videos/Monja_NoMeConoce.mp4"></video>
+    <img src="./13-02-27-spielbank-wiesbaden-by-RalfR-093.jpg" alt="">
+
+    
 </body>
 
 </html>
