--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
 
 <body>
 
-    <header>GitanosNavajeros</header>
+
     <nav class="navbar">
         <div class="container">
 
-            <ul class="nav-links">
-                <a href="#" class="logo"><img src="./13-02-27-spielbank-wiesbaden-by-RalfR-093.jpg" alt="">
-                </a>
-                <li><a href="#">Acerca de</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
+            <div class="header">
+                <ul class="nav-links">
+                    <a href="#" class="logo"><img src="./13-02-27-spielbank-wiesbaden-by-RalfR-093.jpg" alt="">
+                    </a>
+                    <header class="abcd">Machangos Corporation</header>
+
+                </ul>
+            </div>
+
+
         </div>
     </nav>
 
@@ -67,6 +70,9 @@
     <video id="video1" controls src="./videos/Campeones_LaOcasion.mp4"></video>
     <video controls src="./videos/Fnaf_Diles.mp4"></video>
     <video controls src="./videos/Monja_NoMeConoce.mp4"></video>
+
+    <footer>Created By Machangos Corporation 2023 ©
+    </footer>
 
 
 
