--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </nav>
 
     <section>
+        <h1>Los mangos</h1>
         El mango de la especie Mangifera indica es una fruta jugosa (más específicamente una drupa) y tiene numerosas
         variedades con formas, colores, texturas y sabores muy variables. Es redondo a oblongo y puede tener pesos de
         menos de 50 g a más de 2 kg. Consta de una cáscara, una pulpa comestible (el mesocarpio) y un endocarpio duro
@@ -50,15 +51,7 @@
         Una temperatura media anual de 24 a 27 °C es óptima para la planta. Temperaturas de 0 °C o más bajas dañan los
         árboles maduros y matan los jóvenes. Durante la floración la planta requiere temperaturas de al menos 10 °C y
         durante la polinización, de al menos 15 °C.​ Vientos superiores a los 10 km/h arrancan las flores y frutos
-        pequeños del árbol. Necesita abundante luz solar y requiere una época seca algunos meses antes de que aparezcan
-        las flores hasta que se desarrollan las frutas y una época lluviosa a continuación.​ La planta tolera
-        cantidades de lluvia de entre 400 y 3600 mm al año y puede sobrevivir períodos secos de hasta ocho meses. Si el
-        período seco coincide con el desarrollo de las frutas, se perderá gran cantidad de ellas.​ La humedad relativa
-        ideal se encuentra entre los 40 y 60 %. El suelo debe ser bien drenado. Son aptos para el cultivo del mango
-        suelos limosos con humus, suelos arenosos ligeramente ácidos y suelos alcalinos que han sido tratados con
-        fertilizantes.​ El pH ideal del suelo es de 5,5 a 7,5, mientras que suelos más ácidos causan un crecimiento
-        retardado. La planta es polinizada por el viento y diferentes insectos, como moscas, abejas, hormigas o avispas,
-        con las moscas siendo los más importantes. </article>
+        pequeños del árbol. </article>
 
 
     <aside>
