--- a/index.html
+++ b/index.html
@@ -29,29 +29,39 @@
 
     <section>
         <h1>Los mangos</h1>
-        El mango de la especie Mangifera indica es una fruta jugosa (más específicamente una drupa) y tiene numerosas
-        variedades con formas, colores, texturas y sabores muy variables. Es redondo a oblongo y puede tener pesos de
-        menos de 50 g a más de 2 kg. Consta de una cáscara, una pulpa comestible (el mesocarpio) y un endocarpio duro
-        que contiene una semilla.​ Durante el desarrollo del fruto, la cáscara es de un color verde oscuro, que cambia
-        a tonos verdes claros, amarillos, de color naranja, rojos o de color borra de vino al madurar el fruto. Según la
-        variedad, la pulpa del mango maduro es dulce, de textura suave o fibrosa y de color naranja o amarillo.​ La
-        variedad llamada mango de hilacha es la que mayor cantidad de fibra contiene. Esta fruta contiene ácido
-        glutámico, cuya función es estimular la memoria y mantener las células activas, de igual manera tonifica el
-        corazón, elimina las toxinas, fortalece el tejido y previene el envejecimiento prematuro. Además, es una fruta
-        beneficiosa para el hígado y mejora la digestión.
+        <p>El mango de la especie Mangifera indica es una fruta jugosa (más específicamente una drupa) y tiene numerosas
+            variedades con formas, colores, texturas y sabores muy variables. Es redondo a oblongo y puede tener pesos
+            de
+            menos de 50 g a más de 2 kg. Consta de una cáscara, una pulpa comestible (el mesocarpio) y un endocarpio
+            duro
+            que contiene una semilla.​ Durante el desarrollo del fruto, la cáscara es de un color verde oscuro, que
+            cambia
+            a tonos verdes claros, amarillos, de color naranja, rojos o de color borra de vino al madurar el fruto.
+            Según la
+            variedad, la pulpa del mango maduro es dulce, de textura suave o fibrosa y de color naranja o amarillo.​ La
+            variedad llamada mango de hilacha es la que mayor cantidad de fibra contiene. Esta fruta contiene ácido
+            glutámico, cuya función es estimular la memoria y mantener las células activas, de igual manera tonifica el
+            corazón, elimina las toxinas, fortalece el tejido y previene el envejecimiento prematuro. Además, es una
+            fruta
+            beneficiosa para el hígado y mejora la digestión.
 
-        Cuando no ha madurado completamente, es de sabor medianamente dulce. Cuando aún está verde, su cáscara es de
-        dicho color y su pulpa es de color amarillo verdoso muy pálido, consistencia dura y sabor dulce astringente.
+            Cuando no ha madurado completamente, es de sabor medianamente dulce. Cuando aún está verde, su cáscara es de
+            dicho color y su pulpa es de color amarillo verdoso muy pálido, consistencia dura y sabor dulce astringente.
 
-        También el sabor es muy diferente entre una variedad y otra.
+            También el sabor es muy diferente entre una variedad y otra.
 
-        Además del hombre, también algunas especies de insectos, pájaros, murciélagos y otros mamíferos comen mangos.
+            Además del hombre, también algunas especies de insectos, pájaros, murciélagos y otros mamíferos comen
+            mangos.</p>
+
     </section>
     <article>
-        Una temperatura media anual de 24 a 27 °C es óptima para la planta. Temperaturas de 0 °C o más bajas dañan los
-        árboles maduros y matan los jóvenes. Durante la floración la planta requiere temperaturas de al menos 10 °C y
-        durante la polinización, de al menos 15 °C.​ Vientos superiores a los 10 km/h arrancan las flores y frutos
-        pequeños del árbol. </article>
+        <p>Una temperatura media anual de 24 a 27 °C es óptima para la planta. Temperaturas de 0 °C o más bajas dañan
+            los
+            árboles maduros y matan los jóvenes. Durante la floración la planta requiere temperaturas de al menos 10 °C
+            y
+            durante la polinización, de al menos 15 °C.​ Vientos superiores a los 10 km/h arrancan las flores y frutos
+            pequeños del árbol. </p>
+    </article>
 
 
     <aside>
